point log files to var/log/nginx/ inside the project directory.

--- a/etc/conf/nginx.conf
+++ b/etc/conf/nginx.conf
@@ -5,12 +5,8 @@ server {
 	root			/home/vagrant/PROJECT_NAME/etc/www;
 	index			index.html index.php;
 
-	access_log		/var/log/nginx/access.log;
-	error_log		/var/log/nginx/error.log;
-
-	location / {
-		try_files 	$uri $uri/ /index.php /index.html;
-	}
+	access_log		/home/vagrant/PROJECT_NAME/var/log/nginx/access.log;
+	error_log		/home/vagrant/PROJECT_NAME/var/log/nginx/error.log;
 
 	# Error response pages
 	error_page		404 /404.html;
