Handling of all resources not mapping to files to the PHP endpoint.

--- a/etc/conf/nginx.conf
+++ b/etc/conf/nginx.conf
@@ -15,15 +15,25 @@ server {
 		root /usr/share/nginx/www;
 	}
 
-	# pass the PHP scripts to FastCGI server
-	location ~ \.php$ {
-		try_files $uri =404;
+	# From: http://silex.sensiolabs.org/doc/web_servers.html#nginx
 
-		# With php5-fpm
-		fastcgi_pass unix:/var/run/php5-fpm.sock;
-		fastcgi_index index.html;
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		fastcgi_split_path_info ^(.+\.php)(/.+)$;
-		include fastcgi_params;
+	# site-root is redirected to the app
+	location = / {
+		try_files @app @app;
+	}
+
+	# all other locations try other files first, and go to the app if none exists
+	location / {
+		try_files $uri @app;
+	}
+
+	# Based on Silex
+	location @app {
+		fastcgi_pass	unix:/var/run/php5-fpm.sock;
+		include			fastcgi_params;
+
+		fastcgi_param 	SCRIPT_FILENAME 	$document_root/index.php;
+		fastcgi_param 	SCRIPT_NAME 		/index.php;
+		fastcgi_param	PATH_INFO			$fastcgi_script_name;
 	}
 }
